--- a/MonthlyStatement/MonthlyStatement.csproj
+++ b/MonthlyStatement/MonthlyStatement.csproj
@@ -1188,7 +1188,6 @@
     <Content Include="Areas\Admin\Views\ListReportPersonal\Detail.cshtml" />
     <Content Include="Areas\Admin\Views\ListReportDepartment\Detail.cshtml" />
     <Content Include="Areas\Admin\Views\ListReportDepartment\Index.cshtml" />
-    <Content Include="Areas\Personal\Views\Shared\_Layout.cshtml" />
     <Content Include="Areas\Personal\Views\FormReport\ListReportYear.cshtml" />
     <Content Include="Areas\Personal\Views\FormReport\ListReportPeriod.cshtml" />
     <Content Include="Areas\FacultyAreas\Views\web.config" />
@@ -1214,6 +1213,16 @@
     <Content Include="Areas\Staff\Views\FormStaffReport\ListReportYear.cshtml" />
     <Content Include="Areas\Staff\Views\StaffReport\Staff.cshtml" />
     <Content Include="Areas\Staff\Views\StaffReport\StaffDetail.cshtml" />
+    <Content Include="Areas\Department\Views\DepartmentReport\Department.cshtml" />
+    <Content Include="Areas\Department\Views\DepartmentReport\DepartmentDetail.cshtml" />
+    <Content Include="Areas\Department\Views\DepartmentReport\DepartmentReportEdit.cshtml" />
+    <Content Include="Areas\Department\Views\FormDepartmentReport\Index.cshtml" />
+    <Content Include="Areas\Department\Views\FormDepartmentReport\ListReportPeriod.cshtml" />
+    <Content Include="Areas\Department\Views\FormDepartmentReport\ListReportYear.cshtml" />
+    <Content Include="Areas\Personal\Views\Report\PersonalReportEdit.cshtml" />
+    <Content Include="Areas\Personal\Views\Static\Index.cshtml" />
+    <Content Include="Areas\Personal\Views\Index.cshtml" />
+    <Content Include="Areas\Personal\Views\static.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
@@ -1244,12 +1253,12 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Areas\Admin\Data\" />
-    <Folder Include="Areas\Department\Controllers\" />
     <Folder Include="Areas\Department\Data\" />
     <Folder Include="Areas\Department\Views\Shared\" />
     <Folder Include="Areas\FacultyAreas\Data\" />
     <Folder Include="Areas\FacultyAreas\Views\Shared\" />
     <Folder Include="Areas\Personal\Data\" />
+    <Folder Include="Areas\Personal\Views\Shared\" />
     <Folder Include="Areas\Staff\Data\" />
     <Folder Include="Areas\Staff\Views\Shared\" />
     <Folder Include="assets\FileImport\" />
